[package]
name = "value_plot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.16.0"}
egui = "0.16.0"
subprocess = "0.2.9"
[dependencies.clap]
clap = "4.1.4"
features =[ "derive"]
# [patch.crates-io]
